--- a/styles.css
+++ b/styles.css
@@ -19,16 +19,16 @@ body {
 }
 
 ::-webkit-scrollbar {
-   width: 10px;
-   height: 5px;
-   background-color: var(--dark-light); 
+	width: 10px;
+  height: 5px;
+	background-color: var(--dark-light); 
 }
 ::-webkit-scrollbar-thumb {
-   background-color: var(--dark); 
-   border-radius: 10px;
+	background-color: var(--dark); 
+	border-radius: 6px;
 }
 ::-webkit-scrollbar-thumb:hover {
-   background-color: var(--dark); 
+	background-color: var(--light); 
 }
 
 .contianer-fluid {
@@ -585,12 +585,100 @@ select:focus {
 }
 
 
-@media (max-width: 768px) {
-  .container-fluid .content {
+@media (max-width: 1200px) {
+  .contianer-fluid {
+    grid-template-columns: 50px auto;
+    grid-template-rows: 60px 60px auto;
+  }
+
+  .contianer-fluid .content {
     grid-template-columns: 1fr;
     grid-template-areas: 
       "homework"
       "center-c"
       "right-c";
+  }
+  
+  .contianer-fluid .content .center-content {
+    min-width: 100%;
+  }
+
+  .contianer-fluid .content .right-content {
+    min-width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .contianer-fluid {
+    grid-template-columns: 50px auto;
+    grid-template-rows: 60px 60px auto;
+  }
+
+  .contianer-fluid .content {
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+      "homework"
+      "center-c"
+      "right-c";
+  }
+  
+  .contianer-fluid .content .center-content {
+    min-width: 100%;
+  }
+
+  .contianer-fluid .content .right-content {
+    min-width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .contianer-fluid {
+    grid-template-columns: auto;
+    grid-template-rows: 60px 60px auto;
+  }
+
+  .contianer-fluid .content {
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+      "homework"
+      "center-c"
+      "right-c";
+  }
+  
+  .center-nav,
+  .header-titel span,
+  .btn-group-top {
+    display: none;
+  }
+
+  .span-user span,
+  .span-user small {
+    display: none;
+
+  }
+
+  .contianer-fluid .sup-header .search-input {
+    max-width: 100px;
+  }
+
+  .contianer-fluid .content .center-content .chart-box {
+    flex-direction: column;
+  }
+
+  .contianer-fluid .content .center-content .chart-box .box-center-content {
+    max-width: 350px;
+  }
+
+  .contianer-fluid .content .center-content .chart-box .box-center-content:nth-child(2) {
+    margin-left: -3px;
+    margin-top: 20px;
+  }
+
+  .contianer-fluid .content .center-content {
+    min-width: 100%;
+  }
+
+  .contianer-fluid .content .right-content {
+    min-width: 100%;
   }
 }
